--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
 	</head>
 	<body>
 		<!-- Main content goes here -->
+		<table border="1">
+			<tr>
+				<th>ID</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>DOB</th>
+			</tr>
 
+			<tr>
+				<td>1</td>
+				<td>Matt</td>
+				<td>Chamberlain</td>
+				<td>18/9/1980</td>	
+			</tr>
+
+			<tr>
+				<td>2</td>
+				<td>Andrew</td>
+				<td>McLeod</td>
+				<td>11/4/1989</td>	
+			</tr>
+
+
+			<tr>
+				<td>3</td>
+				<td>Mel</td>
+				<td>Campbell</td>
+				<td>14/05/1990</td>	
+			</tr>
+		</table>
 	
 
 
