--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<!-- Main content goes here -->
 		<table border="1">
+			<caption>Registered users</caption>
 			<tr>
 				<th>ID</th>
 				<th>First Name</th>
@@ -36,6 +37,42 @@
 				<td>Mel</td>
 				<td>Campbell</td>
 				<td>14/05/1990</td>	
+			</tr>
+		</table>
+
+		<table border="1">
+			<caption>Orders</caption>
+			<tr>
+				<th colspan="3">Customer Contact Info</th>
+				<th></th>
+			</tr>
+
+			<tr>
+				<th>Name</th>
+				<th>Address</th>
+				<th>Phone Number</th>
+				<th>Order ID</th>
+			</tr>
+
+			<tr>
+				<td>Matt Chamberlain</td>
+				<td>1 House, Street Road, City</td>
+				<td>024 123 4567</td>
+				<td>#23</td>
+			</tr>
+
+			<tr>
+				<td>Fred Savage</td>
+				<td>2 Kent Terrace, Wellington</td>
+				<td>021 143 6666</td>
+				<td>#24</td>
+			</tr>
+
+			<tr>
+				<td>Dan Savage</td>
+				<td>7 Orient Parade, New York</td>
+				<td>024 123 4567</td>
+				<td>#25</td>
 			</tr>
 		</table>
 	
