--- a/index.html
+++ b/index.html
@@ -75,6 +75,49 @@
 				<td>#25</td>
 			</tr>
 		</table>
+
+		<table border="1">
+			<caption>Competition Results</caption>
+			<tr>
+				<th></th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Country</th>
+			</tr>
+
+			<tr>
+				<th rowspan="3">Winners</th>
+				<td>Matt</td>
+				<td>Chamberlain</td>
+				<td>New Zealand</td>
+			</tr>
+
+			<tr>
+				<td>Amy</td>
+				<td>Russel</td>
+				<td>New Zealand</td>
+			</tr>
+
+			<tr>
+				<td>David</td>
+				<td>Bartlet</td>
+				<td>New Zealand</td>
+			</tr>
+
+			<tr>
+				<th rowspan="2">Loosers</th>
+				<td>Unfortunate</td>
+				<td>Person 1</td>
+				<td>Australia</td>
+			</tr>
+
+			<tr>
+				<td>Slacker</td>
+				<td>Number 2</td>
+				<td>England</td>	
+			</tr>
+
+		</table>
 	
 
 
