--- a/index.html
+++ b/index.html
@@ -118,11 +118,47 @@
 			</tr>
 
 		</table>
-	
 
+		<table border="1">
+			<caption>PC Specifications</caption>
+			<tr>
+				<th rowspan="2">Product Name</th>
+				<th rowspan="2">Operating System</th>
+				<th colspan="2">CPU</th>
+				<th rowspan="2">RAM</th>
+				<th colspan="2">Grphics Card</th>
+				<th rowspan="2">Price</th>
+			</tr>
+			<tr>
+				<th>Standard</th>
+				<th>Pro</th>
+				<th>Standard</th>
+				<th>Pro</th>
+			</tr>
 
+			<tr>
+				<td>Inspiron17R</td>
+				<td>Windows 10 x64</td>
+				<td>i5</td>
+				<td>i7</td>
+				<td>8GB</td>
+				<td>550m</td>
+				<td>960m</td>
+				<td>$1500</td>
+			</tr>
 
+			<tr>
+				<td>Zenbook</td>
+				<td>Ubuntu 16.04 x64</td>
+				<td>i3</td>
+				<td>i5</td>
+				<td>16GB</td>
+				<td>integrated</td>
+				<td>960m</td>
+				<td>$4500</td>
+			</tr>
 
+		</table>
 
 	</body>
 </html>
