--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 		</table>
 
-		<table border="1">
+		<table id="computers">
 			<caption>PC Specifications</caption>
 			<tr>
 				<th rowspan="2">Product Name</th>
@@ -130,8 +130,8 @@
 				<th rowspan="2">Price</th>
 			</tr>
 			<tr>
-				<th>Standard</th>
-				<th>Pro</th>
+				<th id="cpu-standard">Standard</th>
+				<th id="cpu-pro">Pro</th>
 				<th>Standard</th>
 				<th>Pro</th>
 			</tr>
@@ -157,6 +157,30 @@
 				<td>960m</td>
 				<td>$4500</td>
 			</tr>
+
+			<tr>
+				<td>Zenbook</td>
+				<td>Ubuntu 16.04 x64</td>
+				<td>i3</td>
+				<td>i5</td>
+				<td>16GB</td>
+				<td>integrated</td>
+				<td>960m</td>
+				<td>$4500</td>
+			</tr>
+
+			<tr>
+				<td>Zenbook</td>
+				<td>Ubuntu 16.04 x64</td>
+				<td>i3</td>
+				<td>i5</td>
+				<td>16GB</td>
+				<td>integrated</td>
+				<td>960m</td>
+				<td>$4500</td>
+			</tr>
+
+
 
 		</table>
 
